Avoid scrollbar pushing content to left

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
     background-color: lavender;
     font-family: "Outfit", sans-serif;
